A small change in the content.

--- a/dsssite/index.html
+++ b/dsssite/index.html
@@ -4,6 +4,6 @@
 	<title> Welcome to DSSSOFTTECH</title>
 </head>
 <body>
-<h1> Thanks for landing in DSS Website</h1>
+<h1> Thanks for landing in DSS Website! please take a survey!!</h1>
 </body>
 </html>
